tests/success/patterns/Patterns-ConstructorImplicits.vix
type Impl where
  impl1 : forall (A : type). Ptr A -> Impl
  impl2 : forall (A : type)(B : type). Ptr A -> Ptr B -> Impl

test (impl1 ptr) = 1
test (impl2 ptr1 ptr2) = 2

test2 (impl1 @A ptr) = 1
test2 (impl2 @A @B ptr1 ptr2) = 2

test3 : Impl -> int
test3 (impl1 ptr) = 1
test3 (impl2 ptr1 ptr2) = 2

test4 : Impl -> int
test4 (impl1 @A ptr) = 1
test4 (impl2 @A @B ptr1 ptr2) = 2
