tests/type-error/Patterns-ConstructorImplicits.vix
type Impl where
  impl1 : forall (A : type). ptr A -> Impl
  impl2 : forall (A : type)(B : type). ptr A -> ptr B -> Impl

test (impl1 @A @n ptr) = 2
test (impl2 @n @A @B ptr1 ptr2) = 3
